--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
         </div>
         <div class="helper">
           Admin → <code>Admin / Admin@Leave</code> • Example →
-          <code>Ahmed Nabeel / moNar</code>
+          <code></code>
         </div>
       </section>
 
