--- a/index.html
+++ b/index.html
@@ -446,8 +446,8 @@
           <button id="fillAdmin" class="btn">Use Admin</button>
         </div>
         <div class="hint" style="margin-top: 8px">
-          Admin → <code>Admin / Admin@Leave</code> • Example →
-          <code>Ahmed Nabeel / moNar</code>
+          Admin → <code>Admin / Admin@Leave
+          
         </div>
       </section>
 
