--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         border: 1px solid var(--outline);
         border-radius: 16px;
         box-shadow: var(--shadow);
+        padding: 20px;
       }
       .row {
         display: flex;
@@ -79,6 +80,8 @@
         padding: 10px 12px;
         outline: none;
         font-size: 14px;
+        margin-bottom: 10px;
+        
       }
       .btn {
         display: inline-flex;
